--- a/trunk/configs/templates/OYE-001.config
+++ b/trunk/configs/templates/OYE-001.config
@@ -209,3 +209,10 @@ CONFIG_FIRMWARE_INCLUDE_VLMCSD=y
 
 CONFIG_FIRMWARE_INCLUDE_NAPT66=y
 
+CONFIG_FIRMWARE_INCLUDE_DNSFORWARDER=y
+
+CONFIG_FIRMWARE_INCLUDE_CHINADNS=y
+
+CONFIG_FIRMWARE_INCLUDE_SHADOWSOCKS=y
+
+
