--- a/trunk/libs/Makefile
+++ b/trunk/libs/Makefile
@@ -29,6 +29,7 @@ LIBS_INCLUDE_LIBUSB_0=n
 LIBS_INCLUDE_LIBUSB_1=n
 LIBS_INCLUDE_LIBJSON_C=n
 LIBS_INCLUDE_LIBWEBSOCKETS=n
+LIBS_INCLUDE_LIBSHADOWSOCKS=n
 LIBS_INCLUDE_MEDIA=n
 STORAGE_ENABLED=n
 
@@ -65,7 +66,9 @@ ifeq ($(CONFIG_FIRMWARE_INCLUDE_TTYD),y)
 LIBS_INCLUDE_LIBJSON_C=y
 LIBS_INCLUDE_LIBWEBSOCKETS=y
 endif
-
+ifeq ($(CONFIG_FIRMWARE_INCLUDE_SHADOWSOCKS),y)
+LIBS_INCLUDE_LIBSHADOWSOCKS=y
+endif
 ifeq ($(STORAGE_ENABLED),y)
 ifeq ($(CONFIG_FIRMWARE_INCLUDE_TRANSMISSION),y)
 LIBS_INCLUDE_LIBSSL=y
@@ -107,6 +110,7 @@ dir_$(LIBS_INCLUDE_LIBUSB_0)			+= libusb
 dir_$(LIBS_INCLUDE_LIBUSB_1)			+= libusb-1.0
 dir_$(LIBS_INCLUDE_LIBJSON_C)			+= libjson-c
 dir_$(LIBS_INCLUDE_LIBWEBSOCKETS)		+= libwebsockets
+dir_$(LIBS_INCLUDE_LIBSHADOWSOCKS)		+= libshadowsocks
 dir_y						+= libnfnetlink
 
 # ipset shared libs
