--- a/trunk/user/Makefile
+++ b/trunk/user/Makefile
@@ -120,6 +120,9 @@ dir_$(TTYD_ENABLED)					+= ttyd
 dir_$(CONFIG_FIRMWARE_INCLUDE_SCUT_MOD)         += scutclient
 dir_$(CONFIG_FIRMWARE_INCLUDE_VLMCSD)			+= vlmcsd
 dir_$(CONFIG_FIRMWARE_INCLUDE_NAPT66)			+= napt66
+dir_$(CONFIG_FIRMWARE_INCLUDE_CHINADNS)		+= chinadns
+dir_$(CONFIG_FIRMWARE_INCLUDE_DNSFORWARDER)		+= dns-forwarder
+dir_$(CONFIG_FIRMWARE_INCLUDE_SHADOWSOCKS)		+= shadowsocks
 
 ifdef CONFIG_BLK_DEV_SD
 dir_$(CONFIG_FIRMWARE_INCLUDE_HDPARM)		+= hdparm
