--- a/trunk/user/www/Makefile
+++ b/trunk/user/www/Makefile
@@ -169,6 +169,17 @@ ifneq ($(CONFIG_FIRMWARE_INCLUDE_SCUT_MOD),y)
 	rm -f $(INSTALLDIR)/www/scutclient_log.asp
 	rm -f $(INSTALLDIR)/www/scutclient_action.asp
 endif
+ifneq ($(CONFIG_FIRMWARE_INCLUDE_DNSFORWARDER),y)
+	rm -f $(INSTALLDIR)/www/dns-forwarder.asp
+endif
+ifneq ($(CONFIG_FIRMWARE_INCLUDE_CHINADNS),y)
+	rm -f $(INSTALLDIR)/www/Chinadns.asp
+endif
+ifneq ($(CONFIG_FIRMWARE_INCLUDE_SHADOWSOCKS),y)
+	rm -f $(INSTALLDIR)/www/Shadowsocks.asp
+	rm -f $(INSTALLDIR)/www/Shadowsocks_action.asp
+	rm -f $(INSTALLDIR)/www/Shadowsocks_log.asp
+endif
 
 clean:
 	@echo "Clean www romfs"
