--- a/trunk/configs/templates/PSG1218.config
+++ b/trunk/configs/templates/PSG1218.config
@@ -214,3 +214,9 @@ CONFIG_FIRMWARE_INCLUDE_VLMCSD=y
 
 CONFIG_FIRMWARE_INCLUDE_NAPT66=y
 
+CONFIG_FIRMWARE_INCLUDE_DNSFORWARDER=y
+
+CONFIG_FIRMWARE_INCLUDE_CHINADNS=y
+
+CONFIG_FIRMWARE_INCLUDE_SHADOWSOCKS=y
+
