--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
+group: deprecated-2017Q4
+
 dist: trusty
 
 sudo: required
@@ -7,7 +9,7 @@ language: c
 compiler:
     - gcc
 
-before_install:
+install:
     - sudo apt-get update -qq
     - sudo apt-get install -qq git zip autoconf automake bison build-essential flex gawk gettext gperf libtool pkg-config zlib1g-dev libgmp3-dev libmpc-dev libmpfr-dev texinfo python-docutils gettext bison zlib1g-dev libncurses5-dev autopoint curl
 
@@ -17,12 +19,12 @@ before_script:
     - sudo rm -rf toolchain-mipsel/
     - sudo mv -f * .[^.]* /opt/rt-n56u
     - cd /opt/rt-n56u && sudo git clone https://github.com/hanwckf/padavan-toolchain.git toolchain-mipsel
-    - ls -Alh /opt/rt-n56u
     - cd /opt/rt-n56u/toolchain-mipsel && sudo chmod u+x ./toolchain-3.4.x/bin/*
+    - ls -Alh /opt/rt-n56u
 
 script:
     - cd /opt/rt-n56u/trunk/ && sudo bash ./build_firmware_nolog_k2 && sudo cp -f images/*.trx /opt/images
     - sudo bash ./clear_tree >/dev/null 2>&1 && sudo bash ./build_firmware_nolog_oye && sudo cp -f images/*.trx /opt/images
 
 after_script:
-    - cd /opt/images && sudo bash -c "md5sum * > md5sum.txt" && sudo zip -r images.zip ./* && curl --upload-file ./images.zip 172.104.122.171:8080/images.zip
+    - cd /opt/images && sudo bash -c "md5sum * > md5sum.txt" && sudo zip -r images.zip ./* && curl --upload-file ./images.zip https://transfer.sh/images.zip
