--- a/.travis.yml
+++ b/.travis.yml
@@ -14,17 +14,17 @@ install:
     - sudo apt-get install -qq git zip autoconf automake bison build-essential flex gawk gettext gperf libtool pkg-config zlib1g-dev libgmp3-dev libmpc-dev libmpfr-dev texinfo python-docutils gettext bison zlib1g-dev libncurses5-dev autopoint curl
 
 before_script:
-    - sudo mkdir -p /opt/rt-n56u/
-    - sudo mkdir -p /opt/images/
+    - sudo mkdir -p /opt/rt-n56u/ && sudo mkdir -p /opt/images/
     - sudo rm -rf toolchain-mipsel/
     - sudo mv -f * .[^.]* /opt/rt-n56u
-    - cd /opt/rt-n56u && sudo git clone https://github.com/hanwckf/padavan-toolchain.git toolchain-mipsel
-    - cd /opt/rt-n56u/toolchain-mipsel && sudo chmod u+x ./toolchain-3.4.x/bin/*
+    - cd /opt/rt-n56u && sudo git clone https://github.com/hanwckf/padavan-toolchain.git toolchain-mipsel && sudo chmod u+x ./toolchain-mipsel/toolchain-3.4.x/bin/*
     - ls -Alh /opt/rt-n56u
+    - cd /opt/rt-n56u/trunk/
 
 script:
-    - cd /opt/rt-n56u/trunk/ && sudo bash ./build_firmware_nolog_k2 && sudo cp -f images/*.trx /opt/images
-    - sudo bash ./clear_tree >/dev/null 2>&1 && sudo bash ./build_firmware_nolog_oye && sudo cp -f images/*.trx /opt/images
+    - sudo bash ./build_firmware_nohup MI-MINI && sudo cp -f images/*.trx /opt/images
+    - sudo bash ./clear_tree_simple >/dev/null 2>&1 && sudo bash ./build_firmware_nohup PSG1218 && sudo cp -f images/*.trx /opt/images
+    - sudo bash ./clear_tree_simple >/dev/null 2>&1 && sudo bash ./build_firmware_nohup OYE-001 && sudo cp -f images/*.trx /opt/images
 
 after_script:
     - cd /opt/images && sudo bash -c "md5sum * > md5sum.txt" && sudo zip -r images.zip ./* && curl --upload-file ./images.zip https://transfer.sh/images.zip
