--- a/trunk/configs/boards/PSG1218/kernel-3.4.x.config
+++ b/trunk/configs/boards/PSG1218/kernel-3.4.x.config
@@ -548,7 +548,7 @@ CONFIG_NETFILTER_XT_MATCH_PHYSDEV=m
 # CONFIG_NETFILTER_XT_MATCH_RATEEST is not set
 # CONFIG_NETFILTER_XT_MATCH_REALM is not set
 CONFIG_NETFILTER_XT_MATCH_RECENT=y
-# CONFIG_NETFILTER_XT_MATCH_SCTP is not set
+CONFIG_NETFILTER_XT_MATCH_SCTP=y
 CONFIG_NETFILTER_XT_MATCH_SOCKET=m
 CONFIG_NETFILTER_XT_MATCH_STATE=y
 # CONFIG_NETFILTER_XT_MATCH_LAYER7 is not set
@@ -636,24 +636,24 @@ CONFIG_BRIDGE_NF_EBTABLES=m
 CONFIG_BRIDGE_EBT_BROUTE=m
 CONFIG_BRIDGE_EBT_T_FILTER=m
 CONFIG_BRIDGE_EBT_T_NAT=m
-# CONFIG_BRIDGE_EBT_802_3 is not set
-# CONFIG_BRIDGE_EBT_AMONG is not set
+CONFIG_BRIDGE_EBT_802_3=m
+CONFIG_BRIDGE_EBT_AMONG=m
 CONFIG_BRIDGE_EBT_ARP=m
 CONFIG_BRIDGE_EBT_IP=m
 CONFIG_BRIDGE_EBT_IP6=m
 CONFIG_BRIDGE_EBT_LIMIT=m
 CONFIG_BRIDGE_EBT_MARK=m
 CONFIG_BRIDGE_EBT_PKTTYPE=m
-# CONFIG_BRIDGE_EBT_STP is not set
+CONFIG_BRIDGE_EBT_STP=m
 CONFIG_BRIDGE_EBT_VLAN=m
 CONFIG_BRIDGE_EBT_ARPREPLY=m
 CONFIG_BRIDGE_EBT_DNAT=m
 CONFIG_BRIDGE_EBT_MARK_T=m
 CONFIG_BRIDGE_EBT_REDIRECT=m
 CONFIG_BRIDGE_EBT_SNAT=m
-# CONFIG_BRIDGE_EBT_LOG is not set
-# CONFIG_BRIDGE_EBT_ULOG is not set
-# CONFIG_BRIDGE_EBT_NFLOG is not set
+CONFIG_BRIDGE_EBT_LOG=m
+CONFIG_BRIDGE_EBT_ULOG=m
+CONFIG_BRIDGE_EBT_NFLOG=m
 # CONFIG_IP_DCCP is not set
 # CONFIG_IP_SCTP is not set
 # CONFIG_RDS is not set
@@ -738,7 +738,7 @@ CONFIG_UEVENT_HELPER_PATH="/sbin/hotplug"
 # CONFIG_DEVTMPFS is not set
 CONFIG_STANDALONE=y
 # CONFIG_PREVENT_FIRMWARE_BUILD is not set
-CONFIG_FW_LOADER=m
+CONFIG_FW_LOADER=y
 CONFIG_FIRMWARE_IN_KERNEL=y
 CONFIG_EXTRA_FIRMWARE=""
 # CONFIG_SYS_HYPERVISOR is not set
@@ -1144,12 +1144,7 @@ CONFIG_FUSE_FS=m
 #
 # Caches
 #
-CONFIG_FSCACHE=m
-CONFIG_FSCACHE_STATS=y
-# CONFIG_FSCACHE_HISTOGRAM is not set
-# CONFIG_FSCACHE_DEBUG is not set
-# CONFIG_FSCACHE_OBJECT_LIST is not set
-# CONFIG_CACHEFILES is not set
+# CONFIG_FSCACHE is not set
 
 #
 # CD-ROM/DVD Filesystems
@@ -1172,8 +1167,7 @@ CONFIG_EXFAT_DISCARD=y
 # CONFIG_EXFAT_DEBUG_MSG is not set
 CONFIG_EXFAT_DEFAULT_CODEPAGE=866
 CONFIG_EXFAT_DEFAULT_IOCHARSET="utf8"
-CONFIG_UFSD_FS=m
-CONFIG_UFSD_USE_NLS=y
+# CONFIG_UFSD_FS is not set
 # CONFIG_NTFS_FS is not set
 
 #
@@ -1571,7 +1565,7 @@ CONFIG_MT76X2_AP_EXTERNAL_PA_EXTERNAL_LNA=y
 #
 # Wireless drivers common configs
 #
-CONFIG_RT_SINGLE_SKU=y
+# CONFIG_RT_SINGLE_SKU is not set
 CONFIG_RT_MAX_CLIENTS=40
 # CONFIG_RT_BAND_STEERING is not set
 # CONFIG_RT_DOT11R_FT is not set
