--- a/trunk/configs/boards/OYE-001/kernel-3.4.x.config
+++ b/trunk/configs/boards/OYE-001/kernel-3.4.x.config
@@ -136,7 +136,7 @@ CONFIG_HAVE_MEMBLOCK_NODE_MAP=y
 CONFIG_ARCH_DISCARD_MEMBLOCK=y
 CONFIG_PAGEFLAGS_EXTENDED=y
 CONFIG_SPLIT_PTLOCK_CPUS=4
-# CONFIG_MOBILITY_GROUP_RAMLESS is not set
+CONFIG_MOBILITY_GROUP_RAMLESS=y
 CONFIG_PAGECACHE_RECLAIM=y
 # CONFIG_COMPACTION is not set
 # CONFIG_PHYS_ADDR_T_64BIT is not set
@@ -535,8 +535,8 @@ CONFIG_NETFILTER_XT_MATCH_PHYSDEV=m
 # CONFIG_NETFILTER_XT_MATCH_RATEEST is not set
 # CONFIG_NETFILTER_XT_MATCH_REALM is not set
 CONFIG_NETFILTER_XT_MATCH_RECENT=y
-# CONFIG_NETFILTER_XT_MATCH_SCTP is not set
-# CONFIG_NETFILTER_XT_MATCH_SOCKET is not set
+CONFIG_NETFILTER_XT_MATCH_SCTP=y
+CONFIG_NETFILTER_XT_MATCH_SOCKET=m
 CONFIG_NETFILTER_XT_MATCH_STATE=y
 # CONFIG_NETFILTER_XT_MATCH_LAYER7 is not set
 # CONFIG_NETFILTER_XT_MATCH_STATISTIC is not set
@@ -544,7 +544,7 @@ CONFIG_NETFILTER_XT_MATCH_STATE=y
 CONFIG_NETFILTER_XT_MATCH_WEBSTR=m
 CONFIG_NETFILTER_XT_MATCH_TCPMSS=y
 CONFIG_NETFILTER_XT_MATCH_TIME=y
-CONFIG_NETFILTER_XT_MATCH_U32=m
+CONFIG_NETFILTER_XT_MATCH_U32=y
 # CONFIG_NETFILTER_XT_MATCH_ETHPORT is not set
 CONFIG_IP_SET=m
 CONFIG_IP_SET_MAX=256
@@ -623,24 +623,24 @@ CONFIG_BRIDGE_NF_EBTABLES=m
 CONFIG_BRIDGE_EBT_BROUTE=m
 CONFIG_BRIDGE_EBT_T_FILTER=m
 CONFIG_BRIDGE_EBT_T_NAT=m
-# CONFIG_BRIDGE_EBT_802_3 is not set
-# CONFIG_BRIDGE_EBT_AMONG is not set
-# CONFIG_BRIDGE_EBT_ARP is not set
+CONFIG_BRIDGE_EBT_802_3=m
+CONFIG_BRIDGE_EBT_AMONG=m
+CONFIG_BRIDGE_EBT_ARP=m
 CONFIG_BRIDGE_EBT_IP=m
 CONFIG_BRIDGE_EBT_IP6=m
 CONFIG_BRIDGE_EBT_LIMIT=m
 CONFIG_BRIDGE_EBT_MARK=m
 CONFIG_BRIDGE_EBT_PKTTYPE=m
-# CONFIG_BRIDGE_EBT_STP is not set
+CONFIG_BRIDGE_EBT_STP=m
 CONFIG_BRIDGE_EBT_VLAN=m
 CONFIG_BRIDGE_EBT_ARPREPLY=m
 CONFIG_BRIDGE_EBT_DNAT=m
 CONFIG_BRIDGE_EBT_MARK_T=m
 CONFIG_BRIDGE_EBT_REDIRECT=m
 CONFIG_BRIDGE_EBT_SNAT=m
-# CONFIG_BRIDGE_EBT_LOG is not set
-# CONFIG_BRIDGE_EBT_ULOG is not set
-# CONFIG_BRIDGE_EBT_NFLOG is not set
+CONFIG_BRIDGE_EBT_LOG=m
+CONFIG_BRIDGE_EBT_ULOG=m
+CONFIG_BRIDGE_EBT_NFLOG=m
 # CONFIG_IP_DCCP is not set
 # CONFIG_IP_SCTP is not set
 # CONFIG_RDS is not set
@@ -810,9 +810,9 @@ CONFIG_MTD_SPI_READ_DOR=y
 # CONFIG_MTD_SPI_READ_DIOR is not set
 # CONFIG_RT2880_FLASH_4M is not set
 # CONFIG_RT2880_FLASH_8M is not set
-CONFIG_RT2880_FLASH_16M=y
+# CONFIG_RT2880_FLASH_16M is not set
 # CONFIG_RT2880_FLASH_32M is not set
-# CONFIG_RT2880_FLASH_AUTO is not set
+CONFIG_RT2880_FLASH_AUTO=y
 CONFIG_RT2880_MTD_PHYSMAP_START=0x1C000000
 CONFIG_RT2880_MTD_PHYSMAP_LEN=0x1000000
 CONFIG_RT2880_MTD_PHYSMAP_BUSWIDTH=2
@@ -1522,7 +1522,7 @@ CONFIG_SQUASHFS=y
 CONFIG_SQUASHFS_XZ=y
 # CONFIG_SQUASHFS_4K_DEVBLK_SIZE is not set
 CONFIG_SQUASHFS_EMBEDDED=y
-CONFIG_SQUASHFS_FRAGMENT_CACHE_SIZE=3
+CONFIG_SQUASHFS_FRAGMENT_CACHE_SIZE=5
 # CONFIG_VXFS_FS is not set
 # CONFIG_MINIX_FS is not set
 # CONFIG_MINIX_FS_NATIVE_ENDIAN is not set
@@ -1893,7 +1893,7 @@ CONFIG_RT_READ_MAC_FROM_MTD=y
 #
 # CONFIG_RA_NAT_NONE is not set
 CONFIG_RA_NAT_HW=y
-CONFIG_RA_HW_NAT=m
+CONFIG_RA_HW_NAT=y
 CONFIG_HNAT_V2=y
 CONFIG_RA_HW_NAT_LAN_VLANID=1
 CONFIG_RA_HW_NAT_WAN_VLANID=2
