compile curl independently

--- a/trunk/libs/Makefile
+++ b/trunk/libs/Makefile
@@ -31,6 +31,7 @@ LIBS_INCLUDE_LIBJSON_C=n
 LIBS_INCLUDE_LIBWEBSOCKETS=n
 LIBS_INCLUDE_LIBSHADOWSOCKS=n
 LIBS_INCLUDE_MEDIA=n
+LIBS_INCLUDE_CURL=n
 STORAGE_ENABLED=n
 
 ifdef CONFIG_MMC_BLOCK
@@ -72,6 +73,7 @@ endif
 ifeq ($(STORAGE_ENABLED),y)
 ifeq ($(CONFIG_FIRMWARE_INCLUDE_TRANSMISSION),y)
 LIBS_INCLUDE_LIBSSL=y
+LIBS_INCLUDE_CURL=y
 endif
 ifeq ($(CONFIG_FIRMWARE_INCLUDE_ARIA),y)
 LIBS_INCLUDE_LIBSSL=y
@@ -102,7 +104,12 @@ ifdef CONFIG_MTD_UBI
 LIBS_INCLUDE_LIBLZO=y
 endif
 
+ifeq ($(CONFIG_FIRMWARE_INCLUDE_CURL),y)
+LIBS_INCLUDE_CURL=y
+endif
+
 dir_y						+= libz
+dir_$(LIBS_INCLUDE_CURL)			+= libcurl
 dir_$(LIBS_INCLUDE_LIBLZO)			+= liblzo
 dir_$(LIBS_INCLUDE_LIBICONV)			+= libiconv
 dir_$(LIBS_INCLUDE_LIBSSL)			+= libssl
@@ -130,7 +137,6 @@ dir_$(LIBS_INCLUDE_MEDIA)			+= libflac
 dir_$(LIBS_INCLUDE_MEDIA)			+= libsqlite
 
 # transmission shared libs
-dir_$(CONFIG_FIRMWARE_INCLUDE_TRANSMISSION)	+= libcurl
 dir_$(CONFIG_FIRMWARE_INCLUDE_TRANSMISSION)	+= libevent
 
 # aria2 shared libs
