--- a/trunk/user/Makefile
+++ b/trunk/user/Makefile
@@ -123,6 +123,7 @@ dir_$(CONFIG_FIRMWARE_INCLUDE_NAPT66)			+= napt66
 dir_$(CONFIG_FIRMWARE_INCLUDE_CHINADNS)		+= chinadns
 dir_$(CONFIG_FIRMWARE_INCLUDE_DNSFORWARDER)		+= dns-forwarder
 dir_$(CONFIG_FIRMWARE_INCLUDE_SHADOWSOCKS)		+= shadowsocks
+dir_$(CONFIG_FIRMWARE_INCLUDE_LRZSZ)			+= lrzsz
 
 ifdef CONFIG_BLK_DEV_SD
 dir_$(CONFIG_FIRMWARE_INCLUDE_HDPARM)		+= hdparm
