--- a/trunk/configs/templates/MI-MINI.config
+++ b/trunk/configs/templates/MI-MINI.config
@@ -221,3 +221,5 @@ CONFIG_FIRMWARE_INCLUDE_CHINADNS=y
 CONFIG_FIRMWARE_INCLUDE_SHADOWSOCKS=y
 
 CONFIG_FIRMWARE_INCLUDE_CURL=y
+
+CONFIG_FIRMWARE_INCLUDE_LRZSZ=y
