--- a/trunk/configs/templates/OYE-001.config
+++ b/trunk/configs/templates/OYE-001.config
@@ -216,3 +216,5 @@ CONFIG_FIRMWARE_INCLUDE_CHINADNS=y
 CONFIG_FIRMWARE_INCLUDE_SHADOWSOCKS=y
 
 CONFIG_FIRMWARE_INCLUDE_CURL=y
+
+CONFIG_FIRMWARE_INCLUDE_LRZSZ=y
