--- a/trunk/libs/Makefile
+++ b/trunk/libs/Makefile
@@ -93,6 +93,10 @@ ifeq ($(LIBS_INCLUDE_LIBWEBSOCKETS),y)
 LIBS_INCLUDE_LIBSSL=y
 endif
 
+ifeq ($(CONFIG_FIRMWARE_INCLUDE_LRZSZ),y)
+LIBS_INCLUDE_LIBICONV=y
+endif
+
 ifdef CONFIG_USB_SUPPORT
 LIBS_INCLUDE_LIBUSB_1=y
 ifeq ($(CONFIG_FIRMWARE_INCLUDE_U2EC),y)
