--- a/trunk/libs/Makefile
+++ b/trunk/libs/Makefile
@@ -32,6 +32,7 @@ LIBS_INCLUDE_LIBWEBSOCKETS=n
 LIBS_INCLUDE_LIBSHADOWSOCKS=n
 LIBS_INCLUDE_MEDIA=n
 LIBS_INCLUDE_CURL=n
+LIBS_INCLUDE_NCURSES=n
 STORAGE_ENABLED=n
 
 ifdef CONFIG_MMC_BLOCK
@@ -112,7 +113,12 @@ ifeq ($(CONFIG_FIRMWARE_INCLUDE_CURL),y)
 LIBS_INCLUDE_CURL=y
 endif
 
+ifeq ($(CONFIG_FIRMWARE_INCLUDE_HTOP),y)
+LIBS_INCLUDE_NCURSES=y
+endif
+
 dir_y						+= libz
+dir_$(LIBS_INCLUDE_NCURSES)			+= libncurses
 dir_$(LIBS_INCLUDE_CURL)			+= libcurl
 dir_$(LIBS_INCLUDE_LIBLZO)			+= liblzo
 dir_$(LIBS_INCLUDE_LIBICONV)			+= libiconv
