--- a/trunk/configs/templates/OYE-001.config
+++ b/trunk/configs/templates/OYE-001.config
@@ -218,3 +218,5 @@ CONFIG_FIRMWARE_INCLUDE_SHADOWSOCKS=y
 CONFIG_FIRMWARE_INCLUDE_CURL=y
 
 CONFIG_FIRMWARE_INCLUDE_LRZSZ=y
+
+CONFIG_FIRMWARE_INCLUDE_HTOP=y
