fix dependencies between libncurses and nano

--- a/trunk/configs/templates/MI-MINI.config
+++ b/trunk/configs/templates/MI-MINI.config
@@ -225,3 +225,5 @@ CONFIG_FIRMWARE_INCLUDE_CURL=y
 CONFIG_FIRMWARE_INCLUDE_LRZSZ=y
 
 CONFIG_FIRMWARE_INCLUDE_HTOP=y
+
+CONFIG_FIRMWARE_INCLUDE_NANO=y
