--- a/trunk/configs/templates/PSG1218.config
+++ b/trunk/configs/templates/PSG1218.config
@@ -225,3 +225,5 @@ CONFIG_FIRMWARE_INCLUDE_CURL=y
 CONFIG_FIRMWARE_INCLUDE_LRZSZ=y
 
 CONFIG_FIRMWARE_INCLUDE_HTOP=y
+
+CONFIG_FIRMWARE_INCLUDE_NANO=y
