add dogcom, gdut-drcom

--- a/trunk/configs/templates/MI-MINI.config
+++ b/trunk/configs/templates/MI-MINI.config
@@ -227,3 +227,8 @@ CONFIG_FIRMWARE_INCLUDE_LRZSZ=y
 CONFIG_FIRMWARE_INCLUDE_HTOP=y
 
 CONFIG_FIRMWARE_INCLUDE_NANO=y
+
+CONFIG_FIRMWARE_INCLUDE_GDUT_DRCOM=y
+
+CONFIG_FIRMWARE_INCLUDE_DOGCOM=y
+
