--- a/trunk/configs/templates/PSG1218.config
+++ b/trunk/configs/templates/PSG1218.config
@@ -227,3 +227,8 @@ CONFIG_FIRMWARE_INCLUDE_LRZSZ=y
 CONFIG_FIRMWARE_INCLUDE_HTOP=y
 
 CONFIG_FIRMWARE_INCLUDE_NANO=y
+
+CONFIG_FIRMWARE_INCLUDE_GDUT_DRCOM=y
+
+CONFIG_FIRMWARE_INCLUDE_DOGCOM=y
+
