--- a/trunk/configs/templates/PSG1218.config
+++ b/trunk/configs/templates/PSG1218.config
@@ -208,6 +208,7 @@ CONFIG_FIRMWARE_INCLUDE_ARIA_WEB_CONTROL=n
 
 CONFIG_FIRMWARE_INCLUDE_SCUT_MOD=y
 
+### require libwebsocket,libjson-c
 CONFIG_FIRMWARE_INCLUDE_TTYD=y
 
 CONFIG_FIRMWARE_INCLUDE_VLMCSD=y
@@ -218,17 +219,22 @@ CONFIG_FIRMWARE_INCLUDE_DNSFORWARDER=y
 
 CONFIG_FIRMWARE_INCLUDE_CHINADNS=y
 
+### require libev,libsodium,libmbedtls
 CONFIG_FIRMWARE_INCLUDE_SHADOWSOCKS=y
 
 CONFIG_FIRMWARE_INCLUDE_CURL=y
 
 CONFIG_FIRMWARE_INCLUDE_LRZSZ=y
 
+### require libncurses
 CONFIG_FIRMWARE_INCLUDE_HTOP=y
 
+### require libncurses
 CONFIG_FIRMWARE_INCLUDE_NANO=y
 
 CONFIG_FIRMWARE_INCLUDE_GDUT_DRCOM=y
 
 CONFIG_FIRMWARE_INCLUDE_DOGCOM=y
+
+CONFIG_FIRMWARE_INCLUDE_IPERF=y
 
