--- a/trunk/user/Makefile
+++ b/trunk/user/Makefile
@@ -134,6 +134,7 @@ dir_$(CONFIG_FIRMWARE_INCLUDE_SHADOWSOCKS)		+= shadowsocks
 dir_$(CONFIG_FIRMWARE_INCLUDE_LRZSZ)			+= lrzsz
 dir_$(CONFIG_FIRMWARE_INCLUDE_GDUT_DRCOM)		+= gdut-drcom
 dir_$(CONFIG_FIRMWARE_INCLUDE_DOGCOM)			+= dogcom
+dir_$(CONFIG_FIRMWARE_INCLUDE_IPERF)			+= iperf
 
 ifdef CONFIG_BLK_DEV_SD
 dir_$(CONFIG_FIRMWARE_INCLUDE_HDPARM)		+= hdparm
