add ssr src, del ss/ssrr binarys support auth_chain_a/b

--- a/trunk/libs/Makefile
+++ b/trunk/libs/Makefile
@@ -30,10 +30,10 @@ LIBS_INCLUDE_LIBUSB_1=n
 LIBS_INCLUDE_LIBJSON_C=n
 LIBS_INCLUDE_LIBPCAP=n
 LIBS_INCLUDE_LIBWEBSOCKETS=n
-LIBS_INCLUDE_LIBSHADOWSOCKS=n
 LIBS_INCLUDE_MEDIA=n
 LIBS_INCLUDE_CURL=n
 LIBS_INCLUDE_NCURSES=n
+LIBS_INCLUDE_LIBPCRE=n
 STORAGE_ENABLED=n
 
 ifdef CONFIG_MMC_BLOCK
@@ -70,7 +70,7 @@ LIBS_INCLUDE_LIBJSON_C=y
 LIBS_INCLUDE_LIBWEBSOCKETS=y
 endif
 ifeq ($(CONFIG_FIRMWARE_INCLUDE_SHADOWSOCKS),y)
-LIBS_INCLUDE_LIBSHADOWSOCKS=y
+LIBS_INCLUDE_LIBPCRE=y
 endif
 ifeq ($(STORAGE_ENABLED),y)
 ifeq ($(CONFIG_FIRMWARE_INCLUDE_TRANSMISSION),y)
@@ -135,7 +135,7 @@ dir_$(LIBS_INCLUDE_LIBUSB_0)			+= libusb
 dir_$(LIBS_INCLUDE_LIBUSB_1)			+= libusb-1.0
 dir_$(LIBS_INCLUDE_LIBJSON_C)			+= libjson-c
 dir_$(LIBS_INCLUDE_LIBWEBSOCKETS)		+= libwebsockets
-dir_$(LIBS_INCLUDE_LIBSHADOWSOCKS)		+= libshadowsocks
+dir_$(LIBS_INCLUDE_LIBPCRE)			+= libpcre
 dir_$(LIBS_INCLUDE_CURL)			+= libcurl
 dir_y						+= libnfnetlink
 
