--- a/trunk/user/Makefile
+++ b/trunk/user/Makefile
@@ -133,6 +133,7 @@ dir_$(CONFIG_FIRMWARE_INCLUDE_DNSFORWARDER)		+= dns-forwarder
 dir_$(CONFIG_FIRMWARE_INCLUDE_SHADOWSOCKS)		+= shadowsocks
 dir_$(CONFIG_FIRMWARE_INCLUDE_LRZSZ)			+= lrzsz
 dir_$(CONFIG_FIRMWARE_INCLUDE_GDUT_DRCOM)		+= gdut-drcom
+dir_$(CONFIG_FIRMWARE_INCLUDE_DNSMASQ_CHINA_CONF)	+= dnsmasq-china-conf
 dir_$(CONFIG_FIRMWARE_INCLUDE_DOGCOM)			+= dogcom
 dir_$(CONFIG_FIRMWARE_INCLUDE_IPERF)			+= iperf
 
