add dnsmasq-china-conf webui (depends on shadowsocks) fix some makefile

--- a/trunk/user/Makefile
+++ b/trunk/user/Makefile
@@ -25,7 +25,7 @@ DROPBEAR_ENABLED=n
 TTYD_ENABLED=n
 HTOP_ENABLE=n
 SAMBA_ENABLED=n
-SAMBA36_ENABLED=n
+CHNROUTE_ENABLED=n
 ifneq ($(CONFIG_FIRMWARE_INCLUDE_OPENSSH),y)
 ifeq ($(CONFIG_FIRMWARE_INCLUDE_DROPBEAR),y)
 DROPBEAR_ENABLED=y
@@ -80,6 +80,13 @@ SAMBA_ENABLED=y
 endif
 endif
 
+ifeq ($(CONFIG_FIRMWARE_INCLUDE_SHADOWSOCKS),y)
+CHNROUTE_ENABLED=y
+endif
+ifeq ($(CONFIG_FIRMWARE_INCLUDE_CHINADNS),y)
+CHNROUTE_ENABLED=y
+endif
+
 dir_y =
 dir_n =
 dir_  =
@@ -124,6 +131,7 @@ dir_$(CONFIG_FIRMWARE_INCLUDE_SSWAN)		+= strongswan
 dir_$(CONFIG_FIRMWARE_INCLUDE_XUPNPD)		+= xupnpd
 dir_$(CONFIG_FIRMWARE_INCLUDE_TCPDUMP)		+= tcpdump
 dir_$(SAMBA_ENABLED)				+= samba3
+dir_$(CHNROUTE_ENABLED)				+= chnroute
 dir_$(TTYD_ENABLED)					+= ttyd
 dir_$(CONFIG_FIRMWARE_INCLUDE_SCUT_MOD)         += scutclient
 dir_$(CONFIG_FIRMWARE_INCLUDE_VLMCSD)			+= vlmcsd
