--- a/trunk/user/gdut-drcom/Makefile
+++ b/trunk/user/gdut-drcom/Makefile
@@ -22,5 +22,5 @@ clean:
 	fi )
 
 romfs:
-	$(ROMFSINST) -d $(THISDIR)/$(SRC_NAME)/src/gdut-drcom /usr/bin/gdut-drcom
+	$(ROMFSINST) -p +x $(THISDIR)/$(SRC_NAME)/src/gdut-drcom /usr/bin/gdut-drcom
 	$(ROMFSINST) -d $(THISDIR)/$(SRC_NAME)/src/gdut-drcom.conf /etc_ro/gdut-drcom/gdut-drcom.conf
