--- a/trunk/user/scutclient/Makefile
+++ b/trunk/user/scutclient/Makefile
@@ -41,7 +41,6 @@ clean:
 	rm -f config_done
 
 romfs:
-	$(ROMFSINST) -d $(THISDIR)/$(SRC_NAME)/scutclient /usr/bin/bin_scutclient
-	${ROMFSINST} -d $(THISDIR)/scripts/enable_scutclient_watchcat /bin/enable_scutclient_watchcat
-	${ROMFSINST} -d $(THISDIR)/scripts/scutclient.sh /bin/scutclient.sh
-	${ROMFSINST} -d $(THISDIR)/scripts/scutclient_watchcat.sh /bin/scutclient_watchcat.sh
+	chmod -R +x ./scripts
+	${ROMFSINST} $(THISDIR)/scripts/ /bin/
+	$(ROMFSINST) -p +x $(THISDIR)/$(SRC_NAME)/scutclient /usr/bin/bin_scutclient
