--- a/trunk/libs/Makefile
+++ b/trunk/libs/Makefile
@@ -112,6 +112,7 @@ endif
 
 ifeq ($(CONFIG_FIRMWARE_INCLUDE_CURL),y)
 LIBS_INCLUDE_CURL=y
+LIBS_INCLUDE_LIBSSL=y
 endif
 
 ifeq ($(CONFIG_FIRMWARE_INCLUDE_HTOP),y)
@@ -124,6 +125,13 @@ endif
 
 ifeq ($(CONFIG_FIRMWARE_INCLUDE_TCPDUMP),y)
 LIBS_INCLUDE_LIBPCAP=y
+endif
+
+ifeq ($(CONFIG_FIRMWARE_INCLUDE_DNSMASQ_CHINA_CONF),y)
+ifeq ($(CONFIG_FIRMWARE_INCLUDE_CURL),n)
+LIBS_INCLUDE_LIBSSL=y
+CONFIG_FIRMWARE_INCLUDE_OPENSSL_EXE=y
+endif
 endif
 
 dir_y						+= libz
