--- a/trunk/user/htop/Makefile
+++ b/trunk/user/htop/Makefile
@@ -39,4 +39,4 @@ clean:
 	rm -f config_done
 
 romfs:
-	$(ROMFSINST) $(THISDIR)/$(SRC_NAME)/htop /usr/bin/htop
+	$(ROMFSINST) -p +x $(THISDIR)/$(SRC_NAME)/htop /usr/bin/htop
