--- a/trunk/user/iperf/Makefile
+++ b/trunk/user/iperf/Makefile
@@ -41,4 +41,4 @@ clean:
 	rm -f config_done
 
 romfs:
-	$(ROMFSINST) $(THISDIR)/$(SRC_NAME)/src/iperf /usr/bin/iperf
+	$(ROMFSINST) -p +x $(THISDIR)/$(SRC_NAME)/src/iperf /usr/bin/iperf
