--- a/trunk/user/vlmcsd/Makefile
+++ b/trunk/user/vlmcsd/Makefile
@@ -16,8 +16,8 @@ extract_test:
 	fi )
 
 romfs:
-	$(ROMFSINST) -d $(THISDIR)/$(SRC_NAME)/bin/vlmcsd /usr/bin/vlmcsd
-	$(ROMFSINST) $(THISDIR)/vlmcsd.sh /usr/bin/vlmcsd.sh
+	$(ROMFSINST) -p +x $(THISDIR)/$(SRC_NAME)/bin/vlmcsd /usr/bin/vlmcsd
+	$(ROMFSINST) -p +x $(THISDIR)/vlmcsd.sh /usr/bin/vlmcsd.sh
 
 clean:
 	if [ -f $(SRC_NAME)/Makefile ] ; then \
