add aria2-1.33.1 prebuild binary update aria2.sh

--- a/trunk/libs/Makefile
+++ b/trunk/libs/Makefile
@@ -34,6 +34,7 @@ LIBS_INCLUDE_MEDIA=n
 LIBS_INCLUDE_CURL=n
 LIBS_INCLUDE_NCURSES=n
 LIBS_INCLUDE_LIBPCRE=n
+LIBS_INCLUDE_LIBXML2=n
 STORAGE_ENABLED=n
 
 ifdef CONFIG_MMC_BLOCK
@@ -79,6 +80,11 @@ LIBS_INCLUDE_CURL=y
 endif
 ifeq ($(CONFIG_FIRMWARE_INCLUDE_ARIA),y)
 LIBS_INCLUDE_LIBSSL=y
+LIBS_INCLUDE_LIBXML2=y
+endif
+ifeq ($(CONFIG_FIRMWARE_INCLUDE_ARIA2_NEW_PREBUILD_BIN),y)
+LIBS_INCLUDE_LIBSSL=y
+LIBS_INCLUDE_LIBXML2=y
 endif
 ifeq ($(CONFIG_FIRMWARE_INCLUDE_MINIDLNA),y)
 LIBS_INCLUDE_LIBICONV=y
@@ -166,7 +172,7 @@ dir_$(LIBS_INCLUDE_MEDIA)			+= libsqlite
 dir_$(CONFIG_FIRMWARE_INCLUDE_TRANSMISSION)	+= libevent
 
 # aria2 shared libs
-dir_$(CONFIG_FIRMWARE_INCLUDE_ARIA)		+= libxml2
+dir_$(LIBS_INCLUDE_LIBXML2)		+= libxml2
 
 all:
 	for i in $(dir_y) ; do \
