--- a/trunk/user/Makefile
+++ b/trunk/user/Makefile
@@ -26,6 +26,8 @@ TTYD_ENABLED=n
 HTOP_ENABLE=n
 SAMBA_ENABLED=n
 CHNROUTE_ENABLED=n
+ARIA2_ENABLE=n
+
 ifneq ($(CONFIG_FIRMWARE_INCLUDE_OPENSSH),y)
 ifeq ($(CONFIG_FIRMWARE_INCLUDE_DROPBEAR),y)
 DROPBEAR_ENABLED=y
@@ -78,6 +80,13 @@ endif
 ifeq ($(CONFIG_FIRMWARE_INCLUDE_SMBD),y)
 SAMBA_ENABLED=y
 endif
+endif
+
+ifeq ($(CONFIG_FIRMWARE_INCLUDE_ARIA),y)
+ARIA2_ENABLE=y
+endif
+ifeq ($(CONFIG_FIRMWARE_INCLUDE_ARIA2_NEW_PREBUILD_BIN),y)
+ARIA2_ENABLE=y
 endif
 
 ifeq ($(CONFIG_FIRMWARE_INCLUDE_SHADOWSOCKS),y)
@@ -170,7 +179,7 @@ dir_$(CONFIG_FIRMWARE_INCLUDE_FTPD)		+= vsftpd
 dir_$(CONFIG_FIRMWARE_INCLUDE_MINIDLNA)		+= minidlna
 dir_$(CONFIG_FIRMWARE_INCLUDE_FIREFLY)		+= firefly
 dir_$(CONFIG_FIRMWARE_INCLUDE_TRANSMISSION)	+= transmission
-dir_$(CONFIG_FIRMWARE_INCLUDE_ARIA)		+= aria2
+dir_$(ARIA2_ENABLE)		+= aria2
 endif
 
 ifdef CONFIG_MTD_UBI
