--- a/trunk/user/aria2/Makefile
+++ b/trunk/user/aria2/Makefile
@@ -3,6 +3,8 @@ SRC_NAME=aria2-1.17.1
 SRC_ARIA_NG_NAME=aria-ng-0.4.0
 SRC_ARIA_NG_URL=https://github.com/mayswind/AriaNg/releases/download/0.4.0/aria-ng-0.4.0.zip
 
+BIN_DIR=aria2-bin
+
 CFLAGS  += -ffunction-sections -fdata-sections
 CXXFLAGS += -ffunction-sections -fdata-sections
 LDFLAGS += -Wl,--gc-sections
@@ -10,7 +12,11 @@ LDFLAGS += -Wl,--gc-sections
 THISDIR = $(shell pwd)
 
 all: extract_test config_test
+ifeq ($(CONFIG_FIRMWARE_INCLUDE_ARIA2_NEW_PREBUILD_BIN),y)
+	$(MAKE) -C $(BIN_DIR)
+else
 	$(MAKE) -C $(SRC_NAME)
+endif
 ifeq ($(CONFIG_FIRMWARE_INCLUDE_ARIA_WEB_CONTROL),y)
 	( if [ ! -f $(THISDIR)/$(SRC_ARIA_NG_NAME).zip ]; then \
 		wget -t5 --timeout=20 --no-check-certificate -O $(SRC_ARIA_NG_NAME).zip $(SRC_ARIA_NG_URL); \
@@ -19,18 +25,22 @@ ifeq ($(CONFIG_FIRMWARE_INCLUDE_ARIA_WEB_CONTROL),y)
 		unzip -qq $(SRC_ARIA_NG_NAME).zip -d ariaweb; \
 	fi )
 endif
-
+	
 extract_test:
+ifneq ($(CONFIG_FIRMWARE_INCLUDE_ARIA2_NEW_PREBUILD_BIN),y)
 	( if [ ! -d $(SRC_NAME) ]; then \
 		tar zxf $(SRC_NAME).tar.gz; \
 	fi )
+endif
 	
 config_test:
+ifneq ($(CONFIG_FIRMWARE_INCLUDE_ARIA2_NEW_PREBUILD_BIN),y)
 	( if [ -f ./config_done ]; then \
 		echo "the same configuration"; \
 	else \
 		make configure && touch config_done; \
 	fi )
+endif
 
 configure:
 	( cd $(SRC_NAME) ; \
@@ -62,6 +72,7 @@ clean:
 	if [ -f $(SRC_NAME)/Makefile ] ; then \
 		$(MAKE) -C $(SRC_NAME) distclean ; \
 	fi ; \
+	$(MAKE) -C $(BIN_DIR) clean
 	rm -rf ariaweb
 	rm -f config_done
 	rm -rf install
@@ -70,5 +81,9 @@ romfs:
 ifeq ($(CONFIG_FIRMWARE_INCLUDE_ARIA_WEB_CONTROL),y)
 	cp -rf $(THISDIR)/ariaweb $(INSTALLDIR)/www
 endif
+ifeq ($(CONFIG_FIRMWARE_INCLUDE_ARIA2_NEW_PREBUILD_BIN),y)
+	$(ROMFSINST) $(THISDIR)/$(BIN_DIR)/aria2c /usr/bin/aria2c
+else
 	$(ROMFSINST) $(THISDIR)/$(SRC_NAME)/src/aria2c /usr/bin/aria2c
+endif
 	$(ROMFSINST) -p +x /usr/bin/aria.sh
