--- a/trunk/configs/templates/OYE-001.config
+++ b/trunk/configs/templates/OYE-001.config
@@ -198,6 +198,9 @@ CONFIG_FIRMWARE_INCLUDE_TRANSMISSION_WEB_CONTROL=n
 ### Include Aria2 download manager. openssl ~1.2MB, aria2 ~3.5MB
 CONFIG_FIRMWARE_INCLUDE_ARIA=y
 
+### Include Aria2 new version instead of old version (prebuild by gcc 4.9.4)
+CONFIG_FIRMWARE_INCLUDE_ARIA2_NEW_PREBUILD_BIN=y
+
 ### Include Aria2 WEB control. ~0.7MB
 CONFIG_FIRMWARE_INCLUDE_ARIA_WEB_CONTROL=y
 
