--- a/trunk/user/Makefile
+++ b/trunk/user/Makefile
@@ -26,7 +26,7 @@ TTYD_ENABLED=n
 HTOP_ENABLE=n
 SAMBA_ENABLED=n
 CHNROUTE_ENABLED=n
-ARIA2_ENABLE=n
+ARIA2_ENABLED=n
 
 ifneq ($(CONFIG_FIRMWARE_INCLUDE_OPENSSH),y)
 ifeq ($(CONFIG_FIRMWARE_INCLUDE_DROPBEAR),y)
@@ -83,10 +83,10 @@ endif
 endif
 
 ifeq ($(CONFIG_FIRMWARE_INCLUDE_ARIA),y)
-ARIA2_ENABLE=y
+ARIA2_ENABLED=y
 endif
 ifeq ($(CONFIG_FIRMWARE_INCLUDE_ARIA2_NEW_PREBUILD_BIN),y)
-ARIA2_ENABLE=y
+ARIA2_ENABLED=y
 endif
 
 ifeq ($(CONFIG_FIRMWARE_INCLUDE_SHADOWSOCKS),y)
@@ -179,7 +179,7 @@ dir_$(CONFIG_FIRMWARE_INCLUDE_FTPD)		+= vsftpd
 dir_$(CONFIG_FIRMWARE_INCLUDE_MINIDLNA)		+= minidlna
 dir_$(CONFIG_FIRMWARE_INCLUDE_FIREFLY)		+= firefly
 dir_$(CONFIG_FIRMWARE_INCLUDE_TRANSMISSION)	+= transmission
-dir_$(ARIA2_ENABLE)		+= aria2
+dir_$(ARIA2_ENABLED)		+= aria2
 endif
 
 ifdef CONFIG_MTD_UBI
