--- a/trunk/user/dnsmasq-china-conf/Makefile
+++ b/trunk/user/dnsmasq-china-conf/Makefile
@@ -10,12 +10,10 @@ THISDIR = $(shell pwd)
 all:
 	( if [ ! -f $(dir)/$(acc_china_file) ];then \
 		wget -q -t5 --timeout=20 --no-check-certificate -P $(dir) $(url)/$(acc_china_file); \
-	fi )
-	( if [ ! -f $(dir)/$(acc_apple_file) ];then \
 		wget -q -t5 --timeout=20 --no-check-certificate -P $(dir) $(url)/$(acc_apple_file); \
+		cat $(dir)/$(acc_apple_file) >> $(dir)/$(acc_china_file); \
+		rm -f $(dir)/$(acc_apple_file); \
 	fi )
-	cat $(dir)/$(acc_apple_file) >> $(dir)/$(acc_china_file)
-	rm -f $(dir)/$(acc_apple_file)
 	sed -i "s|^\(server.*\)/[^/]*$$|\1/$(dns_server)|" $(dir)/$(acc_china_file)
 
 clean:
