--- a/trunk/libs/Makefile
+++ b/trunk/libs/Makefile
@@ -35,6 +35,7 @@ LIBS_INCLUDE_CURL=n
 LIBS_INCLUDE_NCURSES=n
 LIBS_INCLUDE_LIBPCRE=n
 LIBS_INCLUDE_LIBXML2=n
+LIBS_INCLUDE_MBEDTLS=n
 STORAGE_ENABLED=n
 
 ifdef CONFIG_MMC_BLOCK
@@ -72,6 +73,11 @@ LIBS_INCLUDE_LIBWEBSOCKETS=y
 endif
 ifeq ($(CONFIG_FIRMWARE_INCLUDE_SHADOWSOCKS),y)
 LIBS_INCLUDE_LIBPCRE=y
+ifeq ($(CONFIG_FIRMWARE_INCLUDE_SHADOWSOCKS_MBEDTLS),y)
+LIBS_INCLUDE_MBEDTLS=y
+else
+LIBS_INCLUDE_LIBSSL=y
+endif
 endif
 ifeq ($(STORAGE_ENABLED),y)
 ifeq ($(CONFIG_FIRMWARE_INCLUDE_TRANSMISSION),y)
@@ -173,6 +179,8 @@ dir_$(CONFIG_FIRMWARE_INCLUDE_TRANSMISSION)	+= libevent
 
 # aria2 shared libs
 dir_$(LIBS_INCLUDE_LIBXML2)		+= libxml2
+
+dir_$(LIBS_INCLUDE_MBEDTLS)		+= mbedtls
 
 all:
 	for i in $(dir_y) ; do \
