--- a/trunk/configs/templates/OYE-001.config
+++ b/trunk/configs/templates/OYE-001.config
@@ -217,8 +217,11 @@ CONFIG_FIRMWARE_INCLUDE_DNSFORWARDER=y
 
 CONFIG_FIRMWARE_INCLUDE_CHINADNS=n
 
-### require libev,libsodium,libmbedtls
+### require libev,libsodium
 CONFIG_FIRMWARE_INCLUDE_SHADOWSOCKS=y
+
+### using mbedtls instead of openssl for shadowsocks
+CONFIG_FIRMWARE_INCLUDE_SHADOWSOCKS_MBEDTLS=y
 
 CONFIG_FIRMWARE_INCLUDE_CURL=y
 
