compress chnroute and dnsmasq-china-conf by bzip2

--- a/trunk/user/chnroute/Makefile
+++ b/trunk/user/chnroute/Makefile
@@ -6,11 +6,12 @@ all :
 		wget -t3 --timeout=5 -O- '$(url)' | awk -F\| '/CN\|ipv4/ { printf("%s/%d\n", $$4, 32-log($$5)/log(2)) }' > ./chnroute.txt.tmp ;\
 		mv -f chnroute.txt.tmp chnroute.txt ;\
 	fi )
+	tar jcf chnroute.bz2 chnroute.txt
 
 romfs:
 	chmod -R +x ./scripts
 	$(ROMFSINST) $(THISDIR)/scripts/ /usr/bin/
-	$(ROMFSINST) -d $(THISDIR)/chnroute.txt /etc_ro/chnroute.txt
+	$(ROMFSINST) -d $(THISDIR)/chnroute.bz2 /etc_ro/chnroute.bz2
 
 clean :
-	rm -f chnroute.txt*
+	rm -f chnroute.*
