PSG1218 :disable exfat

--- a/trunk/user/lrzsz/Makefile
+++ b/trunk/user/lrzsz/Makefile
@@ -26,7 +26,7 @@ configure:
 	( cd $(SRC_NAME) ; \
 	./configure \
 		--prefix=/usr \
-		--with-libiconv-prefix=$(STAGEDIR) \
+		--disable-nls \
 		--host=$(HOST_TARGET) \
 		--build=$(HOST_BUILD) ; \
 	)
