--- a/trunk/configs/boards/PSG1218/kernel-3.4.x.config
+++ b/trunk/configs/boards/PSG1218/kernel-3.4.x.config
@@ -1155,18 +1155,9 @@ CONFIG_FUSE_FS=m
 #
 # DOS/FAT/NT Filesystems
 #
-CONFIG_FAT_FS=m
 # CONFIG_MSDOS_FS is not set
-CONFIG_VFAT_FS=m
-CONFIG_FAT_DEFAULT_CODEPAGE=866
-CONFIG_FAT_DEFAULT_IOCHARSET="utf8"
-CONFIG_EXFAT_FS=m
-CONFIG_EXFAT_DISCARD=y
-# CONFIG_EXFAT_DELAYED_SYNC is not set
-# CONFIG_EXFAT_KERNEL_DEBUG is not set
-# CONFIG_EXFAT_DEBUG_MSG is not set
-CONFIG_EXFAT_DEFAULT_CODEPAGE=866
-CONFIG_EXFAT_DEFAULT_IOCHARSET="utf8"
+# CONFIG_VFAT_FS is not set
+# CONFIG_EXFAT_FS is not set
 # CONFIG_UFSD_FS is not set
 # CONFIG_NTFS_FS is not set
 
