--- a/trunk/configs/templates/OYE-001.config
+++ b/trunk/configs/templates/OYE-001.config
@@ -241,3 +241,6 @@ CONFIG_FIRMWARE_INCLUDE_IPERF=y
 
 CONFIG_FIRMWARE_INCLUDE_DNSMASQ_CHINA_CONF=y
 
+CONFIG_FIRMWARE_INCLUDE_MINIEAP=y
+
+CONFIG_FIRMWARE_INCLUDE_NJIT_CLIENT=y
