--- a/trunk/configs/templates/PSG1218.config
+++ b/trunk/configs/templates/PSG1218.config
@@ -246,3 +246,6 @@ CONFIG_FIRMWARE_INCLUDE_IPERF=y
 
 CONFIG_FIRMWARE_INCLUDE_DNSMASQ_CHINA_CONF=y
 
+CONFIG_FIRMWARE_INCLUDE_MINIEAP=y
+
+CONFIG_FIRMWARE_INCLUDE_NJIT_CLIENT=y
