--- a/trunk/libs/Makefile
+++ b/trunk/libs/Makefile
@@ -140,10 +140,19 @@ LIBS_INCLUDE_LIBPCAP=y
 endif
 
 ifeq ($(CONFIG_FIRMWARE_INCLUDE_DNSMASQ_CHINA_CONF),y)
-ifeq ($(CONFIG_FIRMWARE_INCLUDE_CURL),n)
 LIBS_INCLUDE_LIBSSL=y
+ifneq ($(CONFIG_FIRMWARE_INCLUDE_CURL),y)
 CONFIG_FIRMWARE_INCLUDE_OPENSSL_EXE=y
 endif
+endif
+
+ifeq ($(CONFIG_FIRMWARE_INCLUDE_MINIEAP),y)
+LIBS_INCLUDE_LIBICONV=y
+endif
+
+ifeq ($(CONFIG_FIRMWARE_INCLUDE_NJIT_CLIENT),y)
+LIBS_INCLUDE_LIBSSL=y
+LIBS_INCLUDE_LIBPCAP=y
 endif
 
 dir_y						+= libz
